--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -9,19 +9,19 @@ body {
 img {
   max-width: 100%;
 }
-.conteiner {  
+.conteiner {
   width: 80%;
   margin: 0 auto;
   max-width: 1320px;
 }
 .col {
   width: 100%;
- }
+}
 .row {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  }
+}
 
 header {
   background-color: rgb(51, 177, 226);
@@ -29,14 +29,14 @@ header {
   position: sticky;
   top: 0;
   z-index: 1;
-  background-image: linear-gradient(to bottom, #4595e0, #5c6a7b );
+  background-image: linear-gradient(to bottom, #3a9fd1, #c4dfe9);
 }
 
 .nav__logo {
   width: 100px;
 }
 
-.nav__list {  
+.nav__list {
   list-style: none;
   display: flex;
 }
@@ -45,8 +45,7 @@ header {
   margin: 0 0 0 1.5rem;
 }
 
-.nav__link {  
- 
+.nav__link {
   color: white;
   text-transform: uppercase;
   text-decoration: none;
@@ -65,31 +64,32 @@ h1 {
   margin: 2rem;
   color: white;
 }
-
-.img-inicio{  
- 
-}
-.col-img {   
+.img-inicio {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
   align-items: center;
-  background-color: blueviolet;  
-  }
-   
-.img-menu {  
-  width: auto;
-  max-height: 160px;  
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.col-img2 {
+  align-items: center;
+}
+
+.img-menu {
+  max-width: 300px;
+  max-height: 160px;
   align-items: center;
   background-color: aquamarine;
   border-radius: 100px;
   overflow: hidden;
-  margin: 1rem; 
+  margin: 1rem;
 }
-
-
 .footer {
-  padding-top: 1rem;
+  padding: 1rem;
   background-color: rgb(57, 57, 58);
   color: rgb(243, 235, 235);
-  background-image: linear-gradient(to top, #4595e0, #5c6a7b );
+  background-image: linear-gradient(to bottom, #3488a9, #5a6b71);
 }
 h4 {
   text-align: center;
@@ -125,14 +125,14 @@ h3 {
   margin: 2rem;
   width: 100%;
 }
+
 .form {
+  justify-content: center;
   background-color: rgb(92, 92, 92);
   width: 350px;
   height: 400px;
   padding: 2rem;
   text-align: center;
-  
-  margin: 0 auto;
-  padding: 1rem;
   color: white;
-  
+  margin: 0 auto;
+}
